Changed neoconf config

--- a/neofetch.conf
+++ b/neofetch.conf
@@ -72,7 +72,7 @@ distro_shorthand="on"
 # Example:
 # on:  'Arch Linux x86_64'
 # off: 'Arch Linux'
-os_arch="on"
+os_arch="off"
 
 ##--------- Uptime
 
@@ -125,7 +125,7 @@ memory_unit="Gib"
 # on:   '998 (pacman), 8 (flatpak), 4 (snap)'
 # tiny: '908 (pacman, flatpak, snap)'
 # off:  '908'
-package_managers="on"
+package_managers="off"
 
 ##--------- Shell
 
