--- a/dotfiles/neofetch/config.conf
+++ b/dotfiles/neofetch/config.conf
@@ -16,7 +16,7 @@ print_info()
         info "${cl4} ╭─" model
         info "${cl4} ├─" cpu
         info "${cl4} ├─" memory
-        info "${cl4} ├─ ${cl0}" disk
+#        info "${cl4} ├─ ${cl0}" disk
         info "${cl4} ├─" gpu
         info "${cl4} ╰─" resolution
 
@@ -31,7 +31,7 @@ print_info()
     kernel_shorthand="on"
 
     ##--------- Distro
-    distro_shorthand="tiny"
+    distro_shorthand="on"
     os_arch="off"
 
     ##--------- Uptime
