More minor changes to waybar config

--- a/dotfiles/waybar/config.jsonc
+++ b/dotfiles/waybar/config.jsonc
@@ -111,13 +111,15 @@
     },
 
     "pulseaudio#microphone": {
-        "format": "{format_source}",
-        "format-source": "Mic: {volume}%",
-        "format-source-muted": "Mic: ",
+        "format": "{icon}",
+        "format-muted": "",
         "on-click": "pamixer --default-source -t",
         "on-scroll-up": "pamixer --default-source -i 5",
         "on-scroll-down": "pamixer --default-source -d 5",
-        "scroll-step": 5
+        "scroll-step": 5,
+        "format-icons": {
+            "default": ""
+        }
     },
     
     "temperature": {
