More minor fixes

--- a/dotfiles/waybar/config.jsonc
+++ b/dotfiles/waybar/config.jsonc
@@ -95,7 +95,7 @@
         "format": "{icon} {volume}%",
         "tooltip": false,
         "format-muted": "",
-        "on-click": "pamixer -t",
+        "on-click": "pavucontrol",
         "on-scroll-up": "pamixer -i 5",
         "on-scroll-down": "pamixer -d 5",
         "scroll-step": 5,
