Fix for hyprland

--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -2,6 +2,7 @@ monitor=eDP-1,2160x1350,auto,1
 
 exec-once = waybar & mako & polkit
 exec-once = wl-paste -p -t text --watch clipman store -P --hist-path="/home/jens/.local/share/clipman-primary.conf"
+exec-once = hyprpaper
 
 env = XCURSOR_SIZE,24
 
