--- a/dotfiles/hyprland/hyprpaper/hyprpaper.conf
+++ b/dotfiles/hyprland/hyprpaper/hyprpaper.conf
@@ -1,5 +1,5 @@
-preload = ~/.config/hypr/wallpaper.jpg
+preload = /home/jens/.config/hypr/wallpaper.jpg
 
-wallpaper = eDP-1,contain:./wallpaper.jpg
+wallpaper = eDP-1,/home/jens/.config/hypr/wallpaper.jpg
 
 ipc = off
