Revert "Changed a few bits in hyprland.conf"
This reverts commit 2972636e66dcd63288377d51d94c006ea0d02361.

--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -76,7 +76,7 @@ $mainMod = SUPER
 bind = $mainMod, Return, exec, kitty
 bind = $mainMod, F, exec, firefox
 bind = $mainMod, C, killactive, 
-bind = $mainMod, escape, exit, 
+bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, fullscreen, 1 
 bind = $mainMod, R, exec, rofi -show run
@@ -116,5 +116,4 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-bind = SUPER, C, exec, clipman store
-bind = SUPER, V, exec, clipman pick -t rofi
+bind = SUPER, C, exec, clipman pick -t rofi
