--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -75,8 +75,8 @@ $mainMod = SUPER
 
 bind = $mainMod, Return, exec, kitty
 bind = $mainMod, F, exec, firefox
-bind = $mainMod, C, killactive, 
-bind = $mainMod, M, exit, 
+bind = $mainMod, O, killactive, 
+bind = $mainMod, escape, exit, 
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, fullscreen, 1 
 bind = $mainMod, R, exec, rofi -show run
