--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -41,6 +41,9 @@ decoration {
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
+    active_opacity = 0.33
+    inactive_opacity = 0.33
+    fullscreen_opacity = 0.33
 }
 
 animations {
