--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -3,12 +3,13 @@ monitor=eDP-1,2160x1350,auto,1
 exec-once = waybar & mako & polkit
 exec-once = wl-paste -p -t text --watch clipman store -P --hist-path="/home/jens/.local/share/clipman-primary.conf"
 exec-once = hyprpaper
+exec-once = flameshot
 
 env = XCURSOR_SIZE,24
 
 input {
     kb_layout = ch
-    kb_variant =legacy
+    kb_variant = de_nodeadkeys
     kb_model =
     kb_options =
     kb_rules =
@@ -83,7 +84,6 @@ bind = $mainMod, escape, exit,
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, fullscreen, 1 
 bind = $mainMod, R, exec, rofi -show run
-bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, swapwindow
 
 bind = $mainMod, left, movefocus, l
@@ -120,3 +120,4 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 bind = SUPER, C, exec, clipman pick -t rofi
+bind = SUPER, P, exec, flameshot gui --pin --clipboard --path "~/Screenshots" --print-geometry
