Change to Hyprland conf

--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -42,9 +42,9 @@ decoration {
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
-    active_opacity = 0.33
-    inactive_opacity = 0.33
-    fullscreen_opacity = 0.33
+    active_opacity = 0.75
+    inactive_opacity = 0.75
+    fullscreen_opacity = 0.75
 }
 
 animations {
@@ -120,4 +120,4 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 bind = SUPER, C, exec, clipman pick -t rofi
-bind = SUPER, P, exec, flameshot gui --pin --clipboard --path "~/Screenshots" --print-geometry
+bind = SUPER, P, exec, flameshot gui --pin --clipboard --print-geometry
