Minor change for Hyprland

--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -120,4 +120,4 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 bind = SUPER, C, exec, clipman pick -t rofi
-bind = SUPER, P, exec, flameshot gui --pin --clipboard --print-geometry
+bind = SUPER, P, exec, grim -g "$(slurp)" - | swappy -f -
