Change to Hyprland conf

--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -120,5 +120,5 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 bind = SUPER, C, exec, clipman pick -t rofi
-bind = SUPER, P, exec, grim | swappy -f -
+bind = SUPER, P, exec, grim -f /tmp/screenshot.png | swappy -f -
 bind = SUPER SHIFT, P, exec, grim -g "$(slurp)" - | swappy -f -
