--- a/dotfiles/waybar/config.jsonc
+++ b/dotfiles/waybar/config.jsonc
@@ -6,7 +6,7 @@
     "passthrough": false,
     "gtk-layer-shell": true,
     "height": 30,
-    "modules-left": [ "clock" ],
+    "modules-left": [ "clock" wlr/workspaces],
     "modules-center": [  ],
     "modules-right": ["temperature", "custom/power_profile","battery", "network", "bluetooth", "backlight","pulseaudio","pulseaudio#microphone","tray"],
     "hyprland/window": {
@@ -21,13 +21,7 @@
             "1": [],
             "2": [],
             "3": [],
-            "4": [],
-            "5": [],
-            "6": [],
-            "7": [],
-            "8": [],
-            "9": [],
-            "10": []
+            "4": []
         }
     },
 
