Switching around a few things with Hyprland

--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -1,9 +1,9 @@
 monitor=eDP-1,2160x1350,auto,1
 
-exec-once = waybar & mako & polkit
-exec-once = wl-paste -p -t text --watch clipman store -P --hist-path="/home/jens/.local/share/clipman-primary.conf"
+exec-once = waybar & mako & polkit & wofi
+exec-once = wl-paste -p -t text --watch clipman store --no-persist
 exec-once = hyprpaper
-exec-once = flameshot
+exec-once = grim & swappy
 
 env = XCURSOR_SIZE,24
 
@@ -119,6 +119,6 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-bind = SUPER, C, exec, clipman pick -t rofi
+bind = SUPER, C, exec, clipman pick -t wofi
 bind = SUPER, P, exec, grim -f /tmp/screenshot.png | swappy -f -
 bind = SUPER SHIFT, P, exec, grim -g "$(slurp)" - | swappy -f -
