--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -78,11 +78,11 @@ device:epic-mouse-v1 {
 $mainMod = SUPER
 
 bind = $mainMod, Return, exec, kitty
-bind = $mainMod, F, exec, firefox
+bind = $mainMod, B, exec, firefox
 bind = $mainMod, O, killactive, 
 bind = $mainMod, escape, exit, 
 bind = $mainMod, E, exec, dolphin
-bind = $mainMod, V, fullscreen, 1 
+bind = $mainMod, F, fullscreen, 1 
 bind = $mainMod, R, exec, rofi -show run
 bind = $mainMod, S, swapwindow
 
