--- a/dotfiles/hyprland/hyprland.conf
+++ b/dotfiles/hyprland/hyprland.conf
@@ -120,6 +120,6 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 bind = SUPER, C, exec, clipman pick -t wofi
-bind = SUPER, C, exec, clipman restore
+bind = SUPER, V, exec, clipman restore
 bind = SUPER, P, exec, grim -f /tmp/screenshot.png | swappy -f -
 bind = SUPER SHIFT, P, exec, grim -g "$(slurp)" - | swappy -f -
